Switch to JDK 11 HTTP client and login before downloading screen shot database
Issue #796